fix: Contrast error on contact page between submit button background and text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ main {
     border-radius: 2px;
     padding: 15px 32px;
     font-size: 100%;
-    background-color: #FF571F;
+    background-color: #250ac0;
     color: #ffffff;
 }
 
